@@ -44,13 +44,23 @@ AC_PROG_CXX
 IT_PROG_INTLTOOL(0.35.0)
 AM_GLIB_GNU_GETTEXT
 
-PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.6.1 gthread-2.0)
+PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.4.11 gthread-2.0)
 PKG_CHECK_MODULES(GIG, gig >= 3.1.1)
 
 # check for presence of libsndfile
 PKG_CHECK_MODULES(SNDFILE, sndfile >= 1.0.2)
 AC_SUBST(SNDFILE_CFLAGS)
 AC_SUBST(SNDFILE_LIBS)
+
+# check for loop functionality in libsndfile
+gigedit_save_CFLAGS=$CFLAGS
+CFLAGS="$SNDFILE_CFLAGS $CFLAGS"
+AC_CHECK_MEMBERS([SF_INSTRUMENT.loops],,
+		 [AC_MSG_WARN([Your version of libsndfile does not support
+    reading of loop information. Gigedit will not be able to
+    extract loop information from sample files.])],
+		 [#include <sndfile.h>])
+CFLAGS=$gigedit_save_CFLAGS
 
 # check for (optional) presence of liblinuxsampler
 liblinuxsampler_version="0.4.0.5cvs"
